--- a/TitanicChallenge.ipynb
+++ b/TitanicChallenge.ipynb
@@ -24,7 +24,7 @@
       "source": [
         "# Indice\n",
         "\n",
-        "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;O desafio é encontrar um conjunto de regras para preencher uma nova colunada chamada \"predicao\", de modo similar ao conteúdo da coluna Survived. Importante: esse conjunto de regras não pode usar a coluna Survived, apenas as outras informações.\n",
+        "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The challenge is to find a set of rules to fill a new column called \"prediction\", similar to the contents of the Survived column. Important: This set of rules cannot use a Survived column, just like other information.\n",
         "\n"
       ]
     },
@@ -40,7 +40,7 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -60,7 +60,7 @@
         "\n",
         "titanic.head()"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -204,7 +204,8 @@
       "source": [
         "\n",
         "----\n",
-        "<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h1>Inicio do molde dos dados"
+        "<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h1>\n",
+        "Start of data mold"
       ]
     },
     {
@@ -220,7 +221,7 @@
         "#Dados retornados como nulos\n",
         "titanic.isna().sum()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -275,7 +276,7 @@
         "titanicWithNaN['Sex'][titanicWithNaN['Sex'] == 'female'] = 1\n",
         "titanicWithNaN['Sex'] = pd.to_numeric(titanicWithNaN['Sex'])"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -318,7 +319,7 @@
       "source": [
         "sns.regplot(x=titanic['Age'], y=titanic['Fare'])"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -386,7 +387,7 @@
         "\n",
         "sns.swarmplot(y=titanic['Age'])"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -456,7 +457,7 @@
         "print()\n",
         "sns.stripplot(y=titanicClassAge['Age'], x=titanicClassAge['Pclass'], data=titanicClassAge)\n"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -519,7 +520,7 @@
       "source": [
         "sns.stripplot(y=titanicClassAge['Age'], x=titanicClassAge['Embarked'], data=titanicClassAge)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -574,7 +575,7 @@
         "\n",
         "titanic['Sex'].value_counts()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -615,7 +616,7 @@
         "\n",
         "titanicClassAge['Sex'].value_counts()"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -647,9 +648,10 @@
         "id": "MwN6swHgeaxv"
       },
       "source": [
-        "Foi detectado que o total passageiros se iguala a  **891** e desse número 577 são **homens**, ou seja, aproximadamente **64%** dos passageiros totais são homens\n",
         "\n",
-        "Analisando mais a fundo utilizando o intervalo de idades que mais ocorreram, foi possível se analisar o total de **645** passageiros que se encontravam entre as idades de 15 a 45 anos e também foi possível de notar que desse total **428** eram **homens** resultando em aproximadamente **66%** desse total."
+        "It was detected that the total passengers equals **891** and of that number **577** are **men**, that is, approximately **64%** of the total passengers are men\n",
+        "\n",
+        "Analyzing further using the age range that most occurred, it was possible to analyze the total of ** 645 ** passengers who were between the ages of 15 to 45 years old and it was also possible to note that of this total **428** were **men** resulting in approximately **66%** of this total."
       ]
     },
     {
@@ -676,7 +678,7 @@
         "\n",
         "Counter(titanic['Pclass'])"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -724,7 +726,7 @@
         "AgeNaNCabin = AgeNaN[AgeNaNCabin]\n",
         "print(Counter(AgeNaNCabin['Sex']))\n"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -787,7 +789,7 @@
         "print(\"Total expenses used by the entire titanic: \" )\n",
         "print(titanic['Fare'].sum())"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -850,7 +852,7 @@
       "source": [
         "titanic['predicao'] = ''"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -862,7 +864,7 @@
         "titanic.fillna({'Age': -1} , inplace=True)\n",
         "titanic.fillna({'Cabin': -1} , inplace=True)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -888,7 +890,7 @@
       "source": [
         "titanic['predicao'][( titanic['Age'] == -1) & (titanic['Cabin'] == -1 )] = 0"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -927,7 +929,7 @@
         "titanic['predicao'][(titanic['Pclass'] == 3)  & ( titanic['Sex'] == 0) & (titanic['Cabin'] == -1 )]  = 0\n",
         "titanic['predicao'][(titanic['Pclass'] == 3)  &  (titanic['Embarked'] =='S')] = 0"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -971,7 +973,7 @@
         "\n",
         "titanic['predicao'][(titanic['Cabin'] == -1)  & (titanic['Embarked'] =='S') & (titanic['Age'] > 15) & (titanic['Age'] < 40)] = 0"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -998,7 +1000,7 @@
       "source": [
         "titanic['predicao'][(titanic['predicao'] != 0 )] = 1\n"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1041,7 +1043,7 @@
         "print(\"Column Survived\" , int(percentTotalSurvived), \"%\")\n",
         "\n"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
