--- a/DesafioTitanic.ipynb
+++ b/DesafioTitanic.ipynb
@@ -664,7 +664,7 @@
       "source": [
         "<br>\n",
         "\n",
-        "Contagem das classes"
+        "Class count"
       ]
     },
     {
